<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateRuleActivity" >

    <EditText
        android:id="@+id/ruleMessageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ruleMessage"
        android:layout_alignBottom="@+id/ruleMessage"
        android:layout_alignLeft="@+id/ruleContactNameValue"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/create_rule_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ruleContactNumber"
        android:layout_alignParentBottom="true"
        android:onClick="submitRule"
        android:text="@string/add_rule_button" />

    <CheckBox
        android:id="@+id/repeatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_rule_submit_button"
        android:layout_alignLeft="@+id/ruleContactNumberValue"
        android:layout_marginBottom="48dp"
        android:checked="false"
        android:text="@string/repeat_check" />

    <TextView
        android:id="@+id/ruleContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ruleMessage"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:text="@string/rule_contact_name" />

    <EditText
        android:id="@+id/ruleContactNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ruleContactName"
        android:layout_alignBottom="@+id/ruleContactName"
        android:layout_alignRight="@+id/create_rule_submit_button"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/ruleMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/repeatCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="21dp"
        android:text="@string/rule_message" />

    <TextView
        android:id="@+id/ruleContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ruleContactName"
        android:layout_below="@+id/ruleContactNameValue"
        android:layout_marginTop="44dp"
        android:text="@string/rule_phone_number" />

    <EditText
        android:id="@+id/ruleContactNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ruleContactNumber"
        android:layout_alignRight="@+id/ruleContactNameValue"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/browseContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ruleContactNumberValue"
        android:layout_below="@+id/ruleContactNumberValue"
        android:layout_marginTop="20dp"
        android:onClick="pickContact"
        android:text="@string/browse_button" />

</RelativeLayout>
